--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class='category'>
                 <h2 class='category-title'>Computer Science</h2>
                 <h3 class='category-subtitle'>Simple programs to implement concepts I picked up from the <span>Codecademy Computer Science</span> course.</h3>
-                <h4 class='category-subtitle'>These are exhibited on Replit for convenience. Man I love Replit.</h4>
+                <h4 class='category-subtitle'>These are exhibited on Replit for convenience.</h4>
                 <div class='category-space'>
 
                     <div class='content-box'>
@@ -215,6 +215,22 @@
                                 <span>
                                     <a href='https://sun-ruiheng.github.io/Tea-Cozy/' target='_blank'>Visit</a>
                                     <a href='https://github.com/sun-ruiheng/Tea-Cozy/' target='_blank'>GitHub</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='content-box'>
+                        <div class="initial-content">
+                            <img src='./images/nekoatsume.jpg' alt='Copy Cats' class='content-image'/>
+                        </div>
+                        <div class="overlay-content">
+                            <div class="content-summary"> 
+                                <h3 class='content-summary-title'>Copy Cat</h3> 
+                                <p class='content-summary-text'>First web app with the React framework!</p>
+                                <span>
+                                    <a href='https://sun-ruiheng.github.io/Copy-Cat/' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/Copy-Cat' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
