--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <h3 class='content-summary-title'>Snake (Pygame)</h3>
                                 <p class='content-summary-text'>Classic Snake game... Nom nom nom. Don't bite yourself!</p>
                                 <span>
-                                    <a href='https://replit.com/@sunruiheng/snake' target='_blank'>Try It!</a>
+                                    <!-- <a href='https://replit.com/@sunruiheng/snake' target='_blank'>Try It!</a> -->
                                     <a href='https://github.com/sun-ruiheng/snake' target='_blank'>GitHub</a>
                                 </span>
                             </div>
