updated football cover

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/bayernpic.jpeg' alt='Football Site' class='content-image'/>
+                            <img src='./images/football.jpg' alt='Football Site' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary">  
