added my name at bottom of dont be evil

--- a/html/blog entries/big tech.html
+++ b/html/blog entries/big tech.html
@@ -44,7 +44,7 @@ font-family: 'Faustina', serif; -->
 
         <div id='text-area'>
             <h1 id="book-title">Don't Be Evil — The Case Against Big Tech</h1>
-            <h2 id='author'>Rana Foroohar</h2>
+            <h2 class='author'>Rana Foroohar</h2>
 
             <h2 class='chapter-title' id='c0'>Introduction</h2>
             <p class='content-paragraph'>
@@ -139,6 +139,8 @@ font-family: 'Faustina', serif; -->
 <p class='content-paragraph'>
     And it’s done! That was fun, it really was. Now it’s time for me to heed Foroohar’s call and get off my computer. (Rana Foroohar ended her book on a corny joke, and so will I.)
 </p>
+
+<h2 class='author review'>Review by Sun Ruiheng</h2>
 
 
         </div>
