--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -63,8 +63,7 @@
             </div>
             <div class="info-part">
                 <h1>I'm Sun Ruiheng,</h1>
-                <p>an incoming Mathematics and Computer Science undergraduate at NUS, currently serving in the Republic
-                    of Singapore Navy.</p>
+                <p>an incoming Mathematics and Computer Science undergraduate at NUS, currently... not doing too much, really.</p>
                 <p>I like sports, I like video games, and I have sort of an unhealthy obsession with cats.</p>
                 <p>While I have some time, I'd love to explore the boundless wealth of opportunities out there, in STEM
                     and other sectors.</p>
