added bfs entry
to be continued on macbook

--- a/html/blog entries/bfs.html
+++ b/html/blog entries/bfs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html lang='en'>
 <html>
     <head>
-        <title>Declaration of Advertisements</title>
+        <title>Breadth-First Search and such</title>
         <link rel="stylesheet" href="../../css/entry.css">
     </head>
 
@@ -13,7 +13,27 @@
                 <li><a href="../aboutme.html">About</a></li>
             </ul>
         </header>
-        <div class="longgg"></div>
+        
+        <div id='content-bar'>
+            <!-- <span class='minimise'>✕</span> -->
+            <h2><u>Contents</u></h2>
+            <a href='#c0'>Introduction</a>
+            <a href='#c1'>The Problem</a>
+            <a href='#c2'>My Terrible Solution</a>
+            <a href='#c3'>Breadth-First Search</a>
+            <a href='#c4'>Another Nice Solution</a>
+            <a href='#c5'>Conclusion</a>
+        </div>
+
+
+
+        <div id='text-area'>
+            <h1 id="book-title">Breadth-First Search and such</h1>
+
+            <h2 class='chapter-title' id='c0'>Introduction</h2>
+            <p class='content-paragraph'>
+                This is my first book review, ever — and from the way I’m kicking off, maybe you could sniff out that I don’t really know how to do this, but neither do I care — I’ll just dump my thoughts here for myself if not anybody else. After finishing this book, I gathered some scrap paper and an old pencil and jotted down anything that came to mind while flipping through it again. I took my time in writing down my opinions on each chapter, each concept, and then while digitising all of it, spent more time cleaning up the disorganised and confusing gibberish I churned out so the product is, I hope, sufficiently reader-friendly.
+            </p> 
     </body>
     <script src='../../js/entry.js' type='text/javascript'></script>
 </html>
