--- a/html/blog entries/bfs.html
+++ b/html/blog entries/bfs.html
@@ -13,7 +13,7 @@
                 <li><a href="../aboutme.html">About</a></li>
             </ul>
         </header>
-        
+
         <div id='content-bar'>
             <!-- <span class='minimise'>✕</span> -->
             <h2><u>Contents</u></h2>
@@ -32,8 +32,8 @@
 
             <h2 class='chapter-title' id='c0'>Introduction</h2>
             <p class='content-paragraph'>
-                This is my first book review, ever — and from the way I’m kicking off, maybe you could sniff out that I don’t really know how to do this, but neither do I care — I’ll just dump my thoughts here for myself if not anybody else. After finishing this book, I gathered some scrap paper and an old pencil and jotted down anything that came to mind while flipping through it again. I took my time in writing down my opinions on each chapter, each concept, and then while digitising all of it, spent more time cleaning up the disorganised and confusing gibberish I churned out so the product is, I hope, sufficiently reader-friendly.
-            </p> 
+                Hmm... This is a work in progress.
+            </p>
     </body>
     <script src='../../js/entry.js' type='text/javascript'></script>
 </html>
@@ -64,7 +64,7 @@
 
 
 
-<!-- 
+<!--
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam donec adipiscing tristique risus nec feugiat in fermentum. Id neque aliquam vestibulum morbi blandit. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper. In pellentesque massa placerat duis ultricies lacus sed. Mauris ultrices eros in cursus turpis. Turpis tincidunt id aliquet risus feugiat in. Molestie at elementum eu facilisis sed odio morbi quis commodo. Purus gravida quis blandit turpis. Gravida arcu ac tortor dignissim convallis. Eu tincidunt tortor aliquam nulla facilisi. Blandit cursus risus at ultrices mi tempus imperdiet nulla. Tellus id interdum velit laoreet. Dignissim suspendisse in est ante. Arcu cursus vitae congue mauris rhoncus aenean. Consectetur lorem donec massa sapien faucibus et molestie ac. Egestas erat imperdiet sed euismod nisi porta lorem mollis. Nunc sed id semper risus in hendrerit gravida rutrum.
 
 Ipsum dolor sit amet consectetur adipiscing elit. In nibh mauris cursus mattis. Et malesuada fames ac turpis egestas integer eget. Vulputate sapien nec sagittis aliquam. Orci a scelerisque purus semper eget duis at tellus at. Ullamcorper eget nulla facilisi etiam dignissim diam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Aliquam ut porttitor leo a diam sollicitudin tempor. Nunc faucibus a pellentesque sit amet porttitor eget dolor morbi.
