--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -48,7 +48,7 @@
                 <button type='submit' name="submit">Submit</button>
             </form>
 
-            
+
         </div> -->
 
 
@@ -63,10 +63,10 @@
             </div>
             <div class="info-part">
                 <h1>I'm Sun Ruiheng,</h1>
-                <p>an incoming Mathematics and Computer Science undergraduate at NUS, currently... not doing too much, really.</p>
+                <p>a freshman studying Mathematics and Computer Science at NUS.</p>
                 <p>I like sports, I like video games, and I have sort of an unhealthy obsession with cats.</p>
-                <p>While I have some time, I'd love to explore the boundless wealth of opportunities out there, in STEM
-                    and other sectors.</p>
+                <p>When I have some time, I intend to (continue to) explore the boundless wealth of opportunities out there,
+                   in STEM and other sectors.</p>
             </div>
             <div class="info-part">
                 <h2 id='get-in-touch'><u>Let's get in touch!</u></h2>
